Use implemented ports mask to check if maximum port count needs to be extended.

* This should fix #8953
 * Also fix some harmless off-by-one errors