src/add-ons/kernel/busses/scsi/ahci/util.cpp
@@ -121,3 +121,17 @@ swap_words(void *data, size_t size)
 		word++;
 	}
 }
+
+
+int
+fls(unsigned mask)
+{
+	if (mask == 0)
+		return 0;
+	int pos = 1;
+	while (mask != 1) {
+		mask >>= 1;
+		pos++;
+	}
+	return pos;
+}
